# wpextract

./: README.md  cli.py  pyproject.toml  requirements.lst  wpextract.py
src/wikiextract/: __init__.py  cli.py  wikiextract.py
